# todo

./: .gitignore  Cargo.toml  input.css  long_txt.txt  tailwind.config.js
assets/: main.css  tailwind.css
public/: index.html
public/wasm/: doxle.js.br  doxle_bg.wasm.br
src/: api.rs  canvas.rs  home.rs  main.rs  todo.rs  upload.rs
wasm/: doxle_bg.wasm
wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
